@@ -11,6 +11,7 @@ Full release notes:
 v8.2.0
 ======
 
+- WL#15664: Add support for Python 3.12
 - WL#15623: Improve the authentication module
 - WL#15218: Support WebAuthn authentication
 - BUG#35547876: C/Python 8.1.0 type check build fails in the pb2 branch
